--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link
+    
+		<!--
+		<link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     />
@@ -13,50 +15,100 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/combine/npm/water.css@2.0/out/dark.min.css,gh/dtinth/dtinth-water@v0.3/dtinth-water.min.css"
     />
+		-->
+		
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="./style.css">
   </head>
+	
   <body>
-    <h1>MIDI-RTC</h1>
-    <p>
-      Send and receive MIDI messages over WebRTC. Powered by simple-peer, P2PT and Web MIDI API.
-    </p>
+    <h1 class="wmwrtctr_title"><img src="./midi.png" class="wmwrtctr_titl_icon"> WebMIDI + WebRTC p2p Transport</h1>
+		<p class="wmwrtctr_intro_text">
+			The purpose of this web app is to connect several devices acros internet 
+			via MIDI in order to synchronize MIDI Transport Control (Mackie) signals 
+			so when a DAW goes into play mode, everyone connected can get the signal 
+			and automatically mute their communication microphones. Also, when DAW playback 
+			stops, everyone receives the MIDI stop signal so their communication microphones 
+			can automatically unmute. <a onClick="JavaScript: wmwrtctr_open_close_instructions();" class="wmwrtctr_instructions_affordance">[Instructions]</a>
+		</p>
+
     <div id="app" class="container">
-      <p id="connection-info">
-        Other peers can connect to you by going to {{url}}
-      </p>
-      <p id="connection-status">
-        Connected to {{activeConnections}} other peer{{activeConnections === 1 ? '' : 's'}}.
-      </p>
+      
+			<p class="wmwrtctr_peer_link_label">Peer Link:</p>
+			<p id="connection-info" class="wmwrtctr_peer_link_url" onClick="JavaScript: wmwrtctr_copy_url_to_clipboard_on_click();" title="click to copy to clipboard">{{url}}</p>
+			
       <template v-if="error">
-        {{ error }}
+        <div class="wmwrtctr_error">
+					{{ error }}
+				</div>
       </template>
       <template v-else>
-        <div class="row">
+        <div class="wmwrtctr_center_display">
           <div>
-            <h2>MIDI input</h2>
-            <port-selector :selected="currentInput" :available="availableInputs" @select="selectedInput = $event"></port-selector>
+            <h2 class="wmwrtctr_port_labels">MIDI input</h2>
+            <!-- <port-selector :selected="currentInput" :available="availableInputs" @select="selectedInput = $event"></port-selector> -->
+						<div class="wmwrtctr_port_name">{{midiInputPortName}}</div>
           </div>
-          <div class="arrow align-self-center">
+          <div class="align-self-center wmwrtctr_arrow">
             &rarr;
           </div>
           <div>
-            <h2>WebRTC</h2>
-            <ul>
+            <h2 class="wmwrtctr_port_labels">WebRTC</h2>
+            <ul class="wmwrtctr_counters">
+							<li>Peers: {{ activeConnections }}</li>
               <li>Received: {{ received }}</li>
               <li>Sent: {{ sent }}</li>
             </ul>
           </div>
-          <div class="arrow align-self-center">
+          <div class="align-self-center wmwrtctr_arrow">
             &rarr;
           </div>
           <div>
-            <h2>MIDI output</h2>
-            <port-selector :selected="currentOutput" :available="availableOutputs" @select="selectedOutput = $event"></port-selector>
+            <h2 class="wmwrtctr_port_labels">MIDI output</h2>
+            <!-- <port-selector :selected="currentOutput" :available="availableOutputs" @select="selectedOutput = $event"></port-selector> -->
+						<div class="wmwrtctr_port_name">{{midiOutputPortName}}</div>
           </div>
         </div>
       </template>
     </div>
+		
+		<p class="wmwrtctr_instructions" id="wmwrtctr_instructions" style="display: none;">
+			Usage instructions for Windows:
+			<br>
+			Preparation: install 
+			<a target="_blank" href="https://www.tobias-erichsen.de/software/loopmidi.html">loopMIDI virtual MIDI cable by Tobias Erichsen</a>.
+			In loopMIDI, create two virtual MIDI cables and name them: "WebRTC-Outgoing" and "WebRTC-Incoming".
+			This web app will automatically search for those two MIDI ports and connect to them.
+			<br>
+			<br>
+			Send your MIDI signals to WebRTC-Outgoing cable to have them broadcast to the group.
+			Incoming MIDI signals from the group will be sent to WebRTC-Incoming MIDI cable.
+			<br>
+			<br>
+			To have your microphone automatically muted/unmuted, 
+			<a target="_blank" href="https://github.com/AtmanActive/MIDI-Transport2Keys">check out this project</a>. 
+			For real-time p2p audio/video communication, check out <a target="_blank" href="https://p2p.mirotalk.com">MiroTalk</a>. 
+			For real-time studio-quality audio transport from your DAW, check out <a target="_blank" href="https://sonobus.net/">Sonobus</a>.
+			<br>
+			<br>
+			Make sure you use this web app in a 
+			<a target="_blank" href="https://en.wikipedia.org/wiki/Chromium_(web_browser)">Chromium-based browser</a>. 
+			Now you can bookmark and share this page link with your fellow musicians. 
+			Pay attention to the link part after the # sign in the address: that's your room ID.
+			<br>
+			<br>
+			As of 2024. WebMIDI on Windows locks all of the available MIDI ports when active. 
+			Thus, make sure to start this browser tab last, after you have your DAW and other 
+			MIDI utilities running.
+		</p>
+		
+		<p class="wmwrtctr_signature">
+      Developed by <a href="https://github.com/AtmanActive/webmidi-rtc-transport" target="_blank">AtmanActive</a> by 
+			expanding on the work by <a href="https://github.com/dtinth/midi-rtc" target="_blank">dtinth</a>. 
+			<br>
+			Powered by simple-peer, P2PT and Web MIDI API.
+    </p>
+		
     <script type="x-template" id="port-selector">
       <div>
         <ul class="port-selector">
@@ -74,10 +126,5 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="./script.js"></script>
-
-    <!-- include the Glitch button to show what the webpage is about and
-          to make it easier for folks to view source and remix -->
-    <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-    <script src="https://button.glitch.me/button.js"></script>
   </body>
 </html>
