--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     />
 		-->
 		
+		
+		<link rel="icon" href="./favicon.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="./style.css">
   </head>
