--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	
   <body>
     <h1 class="wmwrtctr_title"><img src="./midi.png" class="wmwrtctr_titl_icon"> 
-			WebMIDI + WebRTC p2p Transport <a href="/multi"><button class="wmwrtctr_title_button" title="Go to multi-port version">Multi -></button></a>
+			WebMIDI + WebRTC p2p Transport <a href="./multi"><button class="wmwrtctr_title_button" title="Go to multi-port version">Multi -></button></a>
 		</h1>
 		
 		<div class="wmwrtctr_pause_line">
