--- a/multi/index.html
+++ b/multi/index.html
@@ -27,7 +27,7 @@
     <h1 class="wmwrtctr_title"><img src="./midi.png" class="wmwrtctr_titl_icon"> 
 			WebMIDI + WebRTC p2p Multi-Transport 
 			<button class="wmwrtctr_title_button wmwrtctr_btn_plus" title="Add channels">+</button><button class="wmwrtctr_title_button wmwrtctr_btn_minus" title="Remove channels">-</button>
-			<a href="/"><button class="wmwrtctr_title_button" title="Back to single-port version"><</button></a>
+			<a href="../"><button class="wmwrtctr_title_button" title="Back to single-port version"><</button></a>
 		</h1>
 		
 		<div class="wmwrtctr_pause_line">
